--- a/WebUI/Views/Bill/UserBills.cshtml
+++ b/WebUI/Views/Bill/UserBills.cshtml
@@ -58,11 +58,11 @@
                                         <td>residentModelDto.Email</td>
                                         <td>residentModelDto.Phone</td>
                                         <td>
-                                            <a asp-action="Details"  asp-route-id="@residentModelDto.Id"  class="btn btn-sm btn-warning"> Edit </a>
-                                            <a asp-action="Delete" asp-route-id="@residentModelDto.Id" class="btn btn-sm btn-danger">Delete</a>
+                                            <a asp-action=""  asp-route-id=".Id"  class="btn btn-sm btn-warning"> Edit </a>
+                                            <a asp-action="" asp-route-id=".Id" class="btn btn-sm btn-danger">Delete</a>
                                         </td>
                                         <td>
-                                            <a asp-action="UserBills"  asp-route-id="@residentModelDto.Id"  class="btn btn-sm btn-primary"> User Bils </a>
+                                            <a asp-action="UserBills"  asp-route-id="residentModelDto.Id"  class="btn btn-sm btn-primary"> User Bils </a>
                                         </td>
                                     </tr>
                             }
