--- a/WebUI/Views/Flat/Index.cshtml
+++ b/WebUI/Views/Flat/Index.cshtml
@@ -51,7 +51,7 @@
                        {
                            <tr>
                                <td>@flat.Block</td>
-                               <td>@flat.FlatType</td>
+                               <td>@flat.FlatType.Type</td>
                                <td>@flat.Floor</td>
                                <td>@flat.Number</td>
                                <td>@flat.MonthlyPrice</td>
