--- a/WebUI/Views/Tenant/Index.cshtml
+++ b/WebUI/Views/Tenant/Index.cshtml
@@ -5,7 +5,7 @@
     Layout = "_Layout";
 }
 
-@model List<Dto.Concrete.Dtos.Tenant.TenantModelDto>
+@model List<Dto.Concrete.Apartment.Tenant.TenantModelDto>
 
     <div class="container-fluid">
         <div class="card shadow">
